# final-project-Shifting5164

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  TODO.txt  aesdsocket.c  logging_testfile  main.plist  massif.out.2401
.github/workflows/: github-actions.yml
Docker/: Dockerfile
include/: banned.h  cew_client.h  cew_exit.h  cew_http.h  cew_logger.h  cew_settings.h  cew_socket.h  cew_worker.h  logger.h  settings.h
src/: cew_client.c  cew_exit.c  cew_http.c  cew_logger.c  cew_main.c  cew_settings.c  cew_socket.c  cew_worker.c  cew_worker_process.c  logger.c  main.c  settings.c
test/: CMakeLists.txt  cew_test.c  cew_test_logging.c  cew_test_misc.c  cew_test_settings.c  cew_test_socket.c  cew_test_worker.c  test.c  test_logging.c  test_settings.c
test/ini/: invalid_settings.ini  settings.ini  valid_dual_settings.ini  valid_settings.ini
tools/: docker_cmd  killall
www/: home.de.html  home.en.html  home.es.html  home.fa.html  home.fr.html  home.html  home.it.html  home.ja.html  home.nl.html  home.pt-br.html  home.ru.html  home.sq.html  home.tr.html  home.zh-cn.html  home.zh-tw.html  home065b.html  home0694.html  home06b2.html  homec4b7.html  homefb4d.html  homefe39.html  index.html
www/audio-video/: audio-video.html  philosophy-recordings.html
www/cgi-bin/: estseek.cgi
www/contact/: index.html
www/distros/: distros.html  free-distros.html
www/doc/: doc.html
www/education/: education.html
www/fun/: humor.html
www/gnu/: gnu-linux-faq.html  gnu.html  linux-and-gnu.html  pronunciation.html
www/graphics/: graphics.html
www/help/: help.html  index.html  music-subtraction.html  priority-projects.html
www/licenses/: licenses.html
www/manual/: blurbs.html  manual.html
www/people/: people.html
www/philosophy/: free-software-even-more-important.html  free-sw.html  kind-communication.html  philosophy.html
www/proprietary/: proprietary.html
www/server/: select-language38b0.html  sitemap.html  takeaction.html
www/server/standards/: README.translations.html
www/software/: index.html  recent-releases.html  software.html
www/software/aspell/: index.html
www/software/bison/: index.html
www/software/cfengine/: index.html
www/software/gnuae/: index.html
www/software/gnubik/: index.html
www/software/gss/: index.html
www/software/guile-sdl/: index.html
www/software/halifax/: index.html
www/software/hurd/: hurd.html
www/software/metaexchange/: index.html
www/software/powerguru/: index.html
www/software/quickthreads/: index.html
www/software/superopt/: index.html
www/software/xboard/: index.html
